--- a/app/views/subprocesos/_detalles.html.erb
+++ b/app/views/subprocesos/_detalles.html.erb
@@ -19,7 +19,7 @@
 		</tr>
 		<tr>
 			<th>Cargo Responsable</th>
-			<td><%= @subproceso.cargo.nombre %></td>
+			<td><%#= @subproceso.cargo.nombre %></td>
 		</tr>		
 	</tbody>
 </table>
