--- a/app/views/macroprocesos/_detalles.html.erb
+++ b/app/views/macroprocesos/_detalles.html.erb
@@ -23,7 +23,7 @@
 		</tr>
 		<tr>
 			<th>Cargo Responsable</th>
-			<td><%= @macroproceso.cargo.nombre %></td>
+			<td><%#= @macroproceso.cargo.nombre %></td>
 		</tr>		
 	</tbody>
 </table>
