Ahora actualiza el listado de cargos y mantiene los checkboxes en true

--- a/app/views/cargos/create.js.erb
+++ b/app/views/cargos/create.js.erb
@@ -1,5 +1,17 @@
 alert("Cargo Agregado")
 $('#modal-body').html("")
 $('#add-cargo-modal').hide();
+
+var array = []
+var id = 0;
+//capturar los cargos que se encuentran checkeados
+$('#campos-cargos').find("input[type=checkbox]").each(function(){
+  id = $(this).attr('id') 
+  $("#" + id).attr('checked') ? array.push("#" + id) : null;
+})  
 $('#campos-cargos').html("")
-$('#campos-cargos').html("<%= escape_javascript( render( :partial => 'organismos_internos/campos_cargos', :locals => { :cargos => @cargos })) %>")
+$('#campos-cargos').html("<%= escape_javascript( render( :partial => 'organismos_internos/campos_cargos', :locals => { :cargos => @cargos, :cargos_actuales => @cargos_actuales })) %>")
+//volver a checkear
+$.each(array, function(key, object){
+	$(object).attr('checked', true);
+})
