--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,8 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><%= link_to 'Usuarios',usuarios_path %></li>
+                    <li><%= link_to 'Funcionarios',funcionarios_path %></li>
+                    <li><%= link_to 'Estructura Organizacional',estructuras_path %></li>
                     <li><%= link_to 'Roles',roles_path %></li>
                     <li><%= link_to 'Cargos',cargos_path %></li>
                     <!--<li><%= link_to 'Entes', entes_path %></li>-->
