--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -7,18 +7,18 @@
 
   <%= form_tag controller_name, :class => "well form-inline", :method => :get do %>
 
-    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_usuario_path, :class => 'btn btn-primary' %>
-    <%= link_to icon_tag('Todos', :class => 'icon-eye-open icon-white'), usuarios_path, :class => 'btn btn-primary' %>
-    <i class="icon-th-large"></i>
-    <%= label_tag 'Buscar:' %>
-    <%= text_field_tag 'valor', params[:valor], :style => "width:120px;" %>
-    <%= label_tag 'Tipo' %>
-    <%= select_tag :tipo_busqueda, options_for_select(Usuario::TIPO_BUSQUEDA.map{|c| [c,c]},params[:tipo_busqueda]) %>
-    <%= submit_tag 'Buscar',  :class => 'btn btn-primary'%>
-    <hr />
+  <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_usuario_path, :class => 'btn btn-primary' %>
+  <%= link_to icon_tag('Todos', :class => 'icon-eye-open icon-white'), usuarios_path, :class => 'btn btn-primary' %>
+  <i class="icon-th-large"></i>
+  <%= label_tag 'Buscar:' %>
+  <%= text_field_tag 'valor', params[:valor], :style => "width:120px;" %>
+  <%= label_tag 'Tipo' %>
+  <%= select_tag :tipo_busqueda, options_for_select(Usuario::TIPO_BUSQUEDA.map{|c| [c,c]},params[:tipo_busqueda]) %>
+  <%= submit_tag 'Buscar',  :class => 'btn btn-primary'%>
+  <hr />
 
-    <%= select_tag :filtro_rol, options_from_collection_for_select(Rol.all, "id", "nombre", params[:filtro_rol]), :prompt => '-- Seleccione --' %>
-    <%= submit_tag 'Fitrar',  :class => 'btn btn-primary'%>
+  <%= select_tag :filtro_rol, options_from_collection_for_select(Rol.all, "id", "nombre", params[:filtro_rol]), :prompt => '-- Seleccione --' %>
+  <%= submit_tag 'Fitrar',  :class => 'btn btn-primary'%>
   <% end %>
 
 </form>
@@ -26,44 +26,58 @@
 <br />
 
 <% if @usuarios.present? %>
-  <table class="table table-striped table-bordered table-condensed">
-    <tr>
-      <th>Usuario</th>
-      <th>Nombres y Apellido</th>
-      <th>Documento</th>
-      <th>Funcionario</th>
+<table class="table table-striped table-bordered table-condensed">
+  <tr>
+    <th>Usuario</th>
+    <th>Funcionario</th>
+      <!--<th>Documento</th>
+      <th>Funcionario</th>-->
       <th>Rol</th>
 
       <th></th>
     </tr>
     <% @usuarios.each do |usuario| %>
-      <tr>
-        <td><%= usuario.login %></td>
-        <td><%= usuario.apellido_nombre %></td>
-        <td><%= usuario.documento %></td>
-        <td><%= usuario.persona_fisica.present? ? usuario.persona_fisica.nombre : nil %></td>
-        <td><%= usuario.rol.nombre %></td>
-        <td>
+    <tr>
+      <td><%= usuario.login %></td>
+      <td><%= link_to usuario.funcionario.apellido_nombre, usuario.funcionario, :remote => true, :onclick => "verFuncionario()" %></td>
+      <td><%= usuario.rol.nombre %></td>
+      <td>
 
-          <div class="btn-group">              
-            <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
-            <ul id="menu1" class="dropdown-menu">
-              <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_usuario_path(usuario) %></li>
-              <li><%= link_to icon_tag('Cambiar Clave', :class => 'icon-lock'), cambiar_clave_path(usuario) %></li>
-              <li><%= link_to icon_tag('Modificar Datos', :class => 'icon-edit'), modificar_datos_path(usuario) %></li>
-              <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), usuario, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
-            </ul>              
-          </div>
-        </td>
-      </tr>
+        <div class="btn-group">              
+          <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
+          <ul id="menu1" class="dropdown-menu">
+            <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_usuario_path(usuario) %></li>
+            <li><%= link_to icon_tag('Cambiar Clave', :class => 'icon-lock'), cambiar_clave_path(usuario) %></li>
+            <li><%= link_to icon_tag('Modificar Datos', :class => 'icon-edit'), modificar_datos_path(usuario) %></li>
+            <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), usuario, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+          </ul>              
+        </div>
+      </td>
+    </tr>
     <% end %>
   </table> 
   <%= paginate @usuarios %>
 
-<% else %>
+  <% else %>
   <p class="alert-message warning">
     Todavía no hay usuarios, <%= link_to 'agregar', new_usuario_path %>.
   </p>
-<% end %>
+  <% end %>
 
 </section>
+
+<div class="modal" id="ver-funcionario-modal" style="display: none; width: 660px; padding: 10px">
+  <div class="modal-header">
+   <a class="close" data-dismiss="modal">x</a>
+   <h3>Funcionario</h3>
+ </div>
+ <div class="modal-body" id ="modal-body">
+  <%#= render 'campos_tarea' %>
+</div>
+</div>
+
+<script type="text/javascript">
+function verFuncionario(){
+  $('#ver-funcionario-modal').modal('toggle');
+}
+</script>
