--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,6 +103,8 @@
               <li><%= link_to 'Procedimientos', procedimientos_path %></li>
               <li class="nav-header">Expedientes</li>
               <li><%= link_to 'Expedientes', expedientes_path %></li>
+              <li class="nav-header">Informes y consultas</li>
+              <li><%= link_to 'Informes', informes_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
