--- a/app/views/informes/_filtros_promedio.html.erb
+++ b/app/views/informes/_filtros_promedio.html.erb
@@ -4,5 +4,17 @@
 	<h1>Informes: Promedios</h1>
 
 	<%= simple_form_for controller_name, :method => :get do |f| %>
-	<%= f.input 'nombre' %>
+
+	<%= f.input 'fecha_inicio' %>
+	<%= f.input 'fecha_fin' %>
+	<%= f.input 'proceso', :collection => Proceso.all, :label_method => :nombre, :prompt => '-- Seleccione --', :label => "Proceso" %>	
+	<%= f.input 'estructura', :collection => Estructura.all, :label_method => :nombre, :prompt => '-- Seleccione --', :label => "Estructura" %>
+	<%= f.input 'procedimiento', :collection => Procedimiento.all, :label_method => :nombre, :prompt => '-- Seleccione --', :label => "Procedimiento" %>
+
+	<%= f.hidden_field 'filtro', :value => 'pomedios'%>
+
+	<div class="form-actions">
+		<%= f.button :submit, 'Buscar', class: 'btn btn-success' %>
+	</div>
+
 	<% end %>
