--- a/app/views/informes/_filtros_resumen.html.erb
+++ b/app/views/informes/_filtros_resumen.html.erb
@@ -1,1 +1,19 @@
-<h1>Informes: Resumen</h1>
+	<div class="well">
+		<%= link_to icon_tag('Volver', :class => 'icon-arrow-left icon-white'), informes_path, class: 'btn btn-primary' %>
+	</div>
+	<h1>Informes: Resumen</h1>
+
+	<%= simple_form_for controller_name, :method => :get do |f| %>
+
+	<%= f.input 'fecha_inicio', :label => 'Fecha Inicio' %>
+	<%= f.input 'fecha_fin', :label => 'Fecha Fin' %>
+
+	<%= f.input 'estado', :collection => {'Procesados' => 'procesados', 'Entregados' => 'entregados', 'Archivados' => 'archivados', 'Cancelados' => 'cancelados', 'En poceso' => 'en_proceso'}, :prompt => '-- Seleccione --', :label => 'Estado del expediente' %>
+
+	<%= f.hidden_field 'filtro', :value => 'resumen'%>
+
+	<div class="form-actions">
+		<%= f.button :submit, 'Buscar', class: 'btn btn-success' %>
+	</div>
+
+	<% end %>
