--- a/app/views/personas_juridicas/_form.html.erb
+++ b/app/views/personas_juridicas/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.input :documento, :label => 'RUC' %>
   <%= f.input :direccion %>
   <%= f.input :telefono %>
-  <%= f.input :cargo_id, :collection =>  Cargo.all, :label_method => :nombre, :prompt => '-- Seleccione --' %>
+  <%# f.input :cargo_id, :collection =>  Cargo.all, :label_method => :nombre, :prompt => '-- Seleccione --' %>
   <%= f.input :territorio_id, :label => "Ciudad", :collection => Ciudad.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
 
   <%= f.input :tipo_documento_id, :as => :hidden, :input_html => { :value => "2" } %> <!-- 1 RUC -->
